refactor(simulator): Simulator modal redesign * Add modal cog icon * Update footer link and views * Fix banner and close view

--- a/src/frontend/css/debugUtils/settingsModal.config.scss
+++ b/src/frontend/css/debugUtils/settingsModal.config.scss
@@ -1,8 +1,11 @@
 $sm-primaryFontColor: #252525;
 $sm-secondaryFontColor: #fff;
+$sm-thirdFontColor: #bfbfbf;
 $sm-backgroundColor: #fff;
-$sm-primaryHighlightColor: #cc5c13;
+$sm-primaryHighlightColor: #ee7324;
+$sm-primaryHighlightColorHover: #cc5c13;
 $sm-secondaryHighlightColor: #3d4697;
+$sm-secondaryHighlightColorHover: #272e6d;
 $sm-buttonColor: $sm-primaryHighlightColor;
 $sm-buttonFontColor: $sm-secondaryFontColor;
 $sm-optionsBorderColor: #d4d4d4;
