Font color fix and make icon smaller

--- a/src/frontend/css/debugUtils/settingsModal.config.scss
+++ b/src/frontend/css/debugUtils/settingsModal.config.scss
@@ -1,4 +1,4 @@
-$sm-primaryFontColor: #252525;
+$sm-primaryFontColor: #332e2e;
 $sm-secondaryFontColor: #fff;
 $sm-thirdFontColor: #bfbfbf;
 $sm-backgroundColor: #fff;
