Hide footer link in banner view

--- a/src/frontend/css/debugUtils/settingsModal.scss
+++ b/src/frontend/css/debugUtils/settingsModal.scss
@@ -41,7 +41,7 @@
         border-radius: 80px;
 
         #{$root}__submit,
-        #{$root}__footerText {
+        #{$root}__footerLink {
             display: none;
         }
 
